--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -4,7 +4,7 @@ volumes:
   pg_data_production:
   static_volume:
 
-# Всё отличие — заменяем build на image и указываем, какой образ использовать
+# Всё отличие — заменяем build на image и указываем, какой образ использоватьь
 services:
   db:
     image: postgres:13.10
