--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -135,48 +135,47 @@ jobs:
           tags: meltim/taski_gateway:latest
 
   deploy:
-  runs-on: ubuntu-latest
-  needs: 
-    - build_and_push_to_docker_hub
-    - build_frontend_and_push_to_docker_hub
-    - build_gateway_and_push_to_docker_hub
-  steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
-    - name: Copy docker-compose.yml via ssh
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USER }}
-        key: ${{ secrets.SSH_KEY }}
-        passphrase: ${{ secrets.SSH_PASSPHRASE }}
-        source: "docker-compose.production.yml"
-        target: "kittygram"
-    - name: Executing remote ssh commands to deploy
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USER }}
-        key: ${{ secrets.SSH_KEY }}
-        passphrase: ${{ secrets.SSH_PASSPHRASE }}
-        script: |
-          cd kittygram
-          # Останавливаем старые контейнеры
-          sudo docker compose -f docker-compose.production.yml down
-          # Pull новых образов
-          sudo docker compose -f docker-compose.production.yml pull
-          # Запускаем БД и бэкенд для миграций
-          sudo docker compose -f docker-compose.production.yml up -d backend db
-          # Ждем пока БД запустится
-          sleep 10
-          # Выполняем миграции
-          sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
-          # Собираем статику Django
-          sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic --noinput
-          # Копируем статику Django
-          sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/
-          # Запускаем ВСЕ сервисы
-          sudo docker compose -f docker-compose.production.yml up -d
+    runs-on: ubuntu-latest
+    needs: 
+      # Дождёмся билда всех образов Taski
+      - build_and_push_to_docker_hub
+      - build_frontend_and_push_to_docker_hub
+      - build_gateway_and_push_to_docker_hub
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+      # Копируем docker-compose.production.yml на продакшен-сервер.
+      - name: Copy docker-compose.yml via ssh
+        uses: appleboy/scp-action@master
+      # Передаём параметры для action appleboy/scp-action
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
+          source: "docker-compose.production.yml"
+          target: "taski"
+      - name: Executing remote ssh commands to deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
+          # Параметр script передаёт в action appleboy/ssh-action команды,
+          # которые нужно выполнить на сервере, 
+          # с которым установлено соединение
+          script: |
+            cd taski
+            # Выполняет pull образов с Docker Hub
+            sudo docker compose -f docker-compose.production.yml pull
+            # Перезапускает все контейнеры в Docker Compose
+            sudo docker compose -f docker-compose.production.yml down
+            sudo docker compose -f docker-compose.production.yml up -d
+            # Выполняет миграции и сбор статики
+            sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
+            sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
+            sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
