--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -11,7 +11,7 @@ server {
     proxy_pass http://backend:8000/api/;
   }
   location /admin/ {
-    # И в этом блоке то же самое
+    # И в этом блоке то же самое:
     proxy_set_header Host $http_host;
     proxy_pass http://backend:8000/admin/;
   }
