--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -144,10 +144,10 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
-      # Копируем docker-compose.production.yml на продакшен-сервер.
+      # Копируем docker-compose.production.yml на продакшен-сервер
       - name: Copy docker-compose.yml via ssh
         uses: appleboy/scp-action@master
-      # Передаём параметры для action appleboy/scp-action
+      # Передаём параметры для action appleboy/scp-action:
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
@@ -176,6 +176,7 @@ jobs:
             sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
             sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
             sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/
+
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
