--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -17,7 +17,7 @@ services:
     volumes:
       - static_volume:/backend_static
   frontend:
-    image: meltim/taski_frontend  # Качаем с Docker Hub
+    image: meltim/taski_frontend  # Качаем с Docker Hu
     env_file: .env
     command: cp -r /app/build/. /frontend_static/
     volumes:
