--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -23,7 +23,7 @@ services:
     volumes:
       - static_volume:/frontend_static
   gateway:
-    image: meltim/taski_gateway  # Качаем с Docker Hub. 
+    image: meltim/taski_gateway  # Качаем с Docker Hub
     env_file: .env
     volumes:
       - static_volume:/staticfiles/
